# DAPT

./: .gitignore  AGENTS.md  dapt.config.json  pyproject.toml
docs/design-docs/: 0_OVERALL_DESIGN.md  1_ARCHITECTURE.md  2_PLAN.md  3_EXECUTION.md  4_MEMORY.md  5_KNOWLEDGE.md  6_EVALUATION.md  7_REPORT.md  index.md
docs/exec-plans/: index.md
docs/exec-plans/completed/: 1_1_perceptor-contracts-and-artifacts.md  1_2_reference-aligned-parsing-runtime.md  1_3_planner-feedback-and-memory-staging.md  1_4_perceptor-reference-aligned-proofs.md  2_1_search-tree-contracts-and-state.md  2_2_attack-dependency-graph-and-candidate-evaluation.md  2_3_candidate-synthesis-and-graph-ingestion.md  2_4_dependency-aware-selection-and-execution-requests.md  2_5_planner-orchestration-loop-and-stop-conditions.md  2_6_llm-driven-hypothesis-and-provider-config.md  2_7_recon-bootstrap-from-minimal-input.md  2_8_mode-aware-objectives-and-success-termination.md  2_9_planner-budget-and-cost-control.md  3_1_contracts-and-layout.md  3_2_executor-runtime.md  3_3_reference-aligned-proofs.md  3_4_cli-pentest-tool-catalog.md  3_5_recon-web-skills.md  3_6_credential-ad-privesc-catalog.md  4_1_structured-and-retrieval-memory.md  (+7 more)
docs/references/: pentestgpt_parsing_module_extracted.py  pentestgpt_parsing_module_reference.md  pentestgpt_v2_tool_skill_layer.md
imgs/: stages.excalidraw
src/dapt/: __init__.py  config.py  web_targets.py
tests/: test_config.py  test_evaluation.py  test_executor.py  test_knowledge.py  test_memory.py  test_perceptor.py  test_planner.py  test_report.py
(+89 files in other folders)
